Finalised the individual statistics tab, added a scatterplot, ols, extra sidebar features and weight data

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,4 +2,4 @@
 primaryColor = "#00B5B8"  # Teal blue (Fitbit's brand color)
 backgroundColor = "#E0E7EC"  # Light grey background
 secondaryBackgroundColor = "#b0a599"  # Slightly darker for content containers
-textColor = "#1C1C1C"  # Dark grey/black for contrast
+textColor = "#002a3a"  # Dark grey/black for contrast
